--- a/app/views/result.html
+++ b/app/views/result.html
@@ -1,14 +1,14 @@
 <div class="container-fluid no-left-right-padding" id="result-page">
 	<div class="row">
-		<div class="col-md-5">
-			<h3><small>Found {{practiceCount}} practices within
-				<select ng-model="selectedItem" ng-init="selectedItem = radiuses[selectedRadius]" ng-options="r.name for r in radiuses" ng-change="changeRadius(selectedItem.id)"></select>
-			</small></h3>
-		</div>
-	</div>
-	<div class="row">
 		<div class="col-xs-4 no-left-right-padding">
-			<div class="list-group scrollable" auto-scroll>
+			<div class="row" style="padding-left: 15px;">
+				<div class="col-md-12">
+					<h3><small>Found {{practiceCount}} practices within
+						<select ng-model="selectedItem" ng-init="selectedItem = radiuses[0]" ng-options="r.name for r in radiuses" ng-change="changeRadius(selectedItem.id)"></select>
+					</small></h3>
+				</div>
+			</div>
+			<div class="list-group scrollable nopadding" auto-scroll>
 				<a href="" class="list-group-item"  ng-class="{'active': isActive($index)}" ng-click="navPractice($index, true)" ng-repeat="practice in practices">
 					<div class="row">
 						<div class="col-sm-2 price-col">
@@ -23,32 +23,29 @@
 					</div>
 				</a>
 			</div>
+			<h3 class="no-up-down-padding" style="padding-left: 15px;"><small>Fees apply to enrolled patients only.</small></h3>
 		</div>
 		<div class="col-xs-8 no-left-right-padding">
-			<div class="panel panel-default">
-				<div class="panel-heading nopadding">
-					<div ng-hide="noPractices" class="pull-right">
-						<div class="btn-group" role="group" aria-label="links">
-							<a class="btn btn-primary" href='{{thisPractice.url}}' target="_blank">Website</a>
-							<a class="btn btn-primary" href="http://maps.apple.com/?saddr={{userAddress}}&daddr={{thisPractice.address}}" target="_blank">Directions</a>
-						</div>
+			<tabset style="padding-top: 15px;">
+				<tab heading="Map">
+					<div id="map_canvas" ng-hide="noPractices" ng-controller="MapCtrl">
+						<leaflet id="leaflet_map" markers="markers" paths="paths" height="300px" width="100%" layers="layers"></leaflet>
 					</div>
-					<h4 class="text-left">{{thisPractice.name}} <small>{{thisPractice.pho}}</small></h4>
-				    <h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
-				    <ul class="nav nav-tabs" role="tablist">
-						<li role="presentation" class="active"><a href="">Map</a></li>
-						<li><a href="">Info</a></li>
-					</ul>
-				</div>
-				<div class="panel-body tab-content" ng-hide="noPractices">
-				 	<div id="map_canvas" ng-controller="MapController">
-		  				<leaflet id="leaflet_map" markers="markers" paths="paths" height="300px" width="100%" layers="layers"></leaflet>
-		  			</div>
-				</div>
-				<div class="panel-footer" ng-hide="noPractices">
-		  			<p class="text-centre">Fees apply to enrolled patients only.</p>
-		  		</div>
-			</div>
+					<h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
+				</tab>
+				<tab heading="{{thisPractice.name}}" ng-show="thisPractice.name">
+					<div style="padding: 15px;">
+						<div ng-hide="noPractices" class="pull-right">
+							<div class="btn-group" role="group" aria-label="links">
+								<a class="btn btn-primary" href='{{thisPractice.url}}' target="_blank">Website</a>
+								<a class="btn btn-primary" href="http://maps.apple.com/?saddr={{userAddress}}&daddr={{thisPractice.address}}" target="_blank">Directions</a>
+							</div>
+						</div>
+						<h4>{{thisPractice.name}} <small>{{thisPractice.pho}}</small></h4>
+						<p>No further information supplied for this practice.</p>
+					</div>
+				</tab>
+			</tabset>
 		</div>
 	</div>
 </div>
