--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,4 +19,11 @@
       </button>
     </div>
   </form>
+
 </div>
+  <div class="footer">
+    <a href="https://play.google.com/store/apps/details?id=com.ionicframework.doctorpricer918978">
+    <img alt="Android app on Google Play"
+         src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png" />
+    </a>
+  </div>
