--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -114,6 +114,7 @@ input[type=number] {
 
 .active {
 /*  background-color: #28A15D !important;*/
+  -webkit-transform-style: preserve-3d;
   transition: background .4s linear;
   -webkit-transition-duration: 0.4s;
   -moz-transition-duration: 0.4s;
@@ -165,6 +166,7 @@ input[type=number] {
 /* Navbar search stuff */
 .navbar-form.ng-hide-add.ng-hide-add-active,
 .navbar-form.ng-hide-remove.ng-hide-remove-active {
+  -webkit-transform-style: preserve-3d;
   -webkit-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
   -moz-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
   -ms-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
@@ -179,6 +181,7 @@ input[type=number] {
 
 /* View transition stuff */
 .view-animate.ng-enter, .view-animate.ng-leave {
+  -webkit-transform-style: preserve-3d;
   -webkit-transition: all 500ms ease-in-out;
   -moz-transition: all 500ms ease-in-out;
   -ms-transition: all 500ms ease-in-out;
@@ -195,14 +198,17 @@ input[type=number] {
 }
 .view-animate.ng-enter {
   top: 0;
+  bottom: 0;
   left:100%;
 }
 .view-animate.ng-enter.ng-enter-active {
   top: 0;
+  bottom: 0;
   left:0;
 }
 .view-animate.ng-leave.ng-leave-active {
   top: 0;
+  bottom: 0;
   left:-100%;
 }
 
@@ -231,6 +237,7 @@ input[type=number] {
   overflow: hidden;
   margin: 0;
   padding: 0;
+  -webkit-transform-style: preserve-3d;
   -webkit-transition: max-height 0.5s;
   -moz-transition: max-height 0.5s;
   -ms-transition: max-height 0.5s;
@@ -251,6 +258,7 @@ input[type=number] {
 @media screen and (max-width: 767px) {
   .row-offcanvas {
     position: relative;
+    -webkit-transform-style: preserve-3d;
     -webkit-transition: all .25s ease-out;
     -moz-transition: all .25s ease-out;
     -ms-transition: all .25s ease-out;
