--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="col-md-2 nopadding">
-      <button type="submit" class="btn btn-primary btn-lg">
+      <button type="submit" class="btn btn-cool btn-lg">
         <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
       </button>
     </div>
