--- a/app/views/result.html
+++ b/app/views/result.html
@@ -40,8 +40,8 @@
 					<div style="padding: 15px;">
 						<div ng-hide="noPractices" class="pull-right">
 							<div class="btn-group" role="group" aria-label="links">
-								<a class="btn btn-primary" href='{{thisPractice.url}}' target="_blank">Website</a>
-								<a class="btn btn-primary" href="http://maps.apple.com/?saddr={{userAddress}}&daddr={{thisPractice.address}}" target="_blank">Directions</a>
+								<a class="btn btn-cool" href='{{thisPractice.url}}' target="_blank">Website</a>
+								<a class="btn btn-cool" href="http://maps.apple.com/?saddr={{userAddress}}&daddr={{thisPractice.address}}" target="_blank">Directions</a>
 							</div>
 						</div>
 						<h4>{{thisPractice.name}} <small>{{thisPractice.pho}}</small></h4>
