--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -222,17 +222,17 @@ input[type=number] {
 .view-animate.ng-leave{
   transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
-  -webkit-transform: translate3d(100%, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
 }
 .view-animate.ng-leave.ng-leave-active {
   transform: translate3d(-100%, 0, 0);
   -moz-transform: translate3d(-100%, 0, 0);
-  -webkit-transform: translate3d(100%, 0, 0);
+  -webkit-transform: translate3d(-100%, 0, 0);
 }
 .view-animate.ng-enter.ng-enter-active {
   transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
-  -webkit-transform: translate3d(100%, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
 }
 
 /* Expand to full height */
