Fetches data from heroku API I built!

--- a/app/views/result.html
+++ b/app/views/result.html
@@ -36,7 +36,7 @@
 					</div>
 					<h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
 				</tab>
-				<tab heading="Info - {{thisPractice.name}}" ng-show="thisPractice.name">
+				<tab heading="Info" ng-show="thisPractice.name">
 					<div style="padding: 15px;">
 						<div ng-hide="noPractices" class="pull-right">
 							<div class="btn-group" role="group" aria-label="links">
