--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,6 +9,7 @@
 
 html, body {
   overflow-x: hidden;
+  overflow-y: hidden;
   padding: 0;
   margin: 0;
   height: 100%;
@@ -71,9 +72,6 @@ input[type=number] {
 }
 
 /* Navbar brand stuff */
-.navbar {
-/*  height: 50px;*/
-}
 .navbar-default {
   font-size: 18px;
   margin-bottom: 0px;
@@ -318,7 +316,6 @@ input[type=number] {
       width: 100% !important;
       left: 0px !important;
     }
-  }
   .navbar-brand-centred {
     font-size: 28px;
   }
@@ -329,3 +326,4 @@ input[type=number] {
   h4 {
     font-size: 16px;
   }
+}
