--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,7 +9,6 @@
 
 html, body {
   overflow-x: hidden;
-  overflow-y: hidden;
   padding: 0;
   margin: 0;
   height: 100%;
@@ -93,10 +92,15 @@ input[type=number] {
     position: absolute;
     left: 50%;
     display: block;
-    width: 250px;
-    text-align: center;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 210px;
     color: white;
+    text-align: center;
     font-size: 36px;
+}
+.navbar>.container-fluid .navbar-brand-centred {
+  margin-left: -105px !important;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: white;
@@ -318,6 +322,10 @@ input[type=number] {
     }
   .navbar-brand-centred {
     font-size: 28px;
+    width: 170px;
+  }
+  .navbar>.container-fluid .navbar-brand-centred {
+    margin-left: -80px !important;
   }
   h3 {
     font-size: 20px;
