--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -67,7 +67,6 @@ input[type=number] {
 /* Makes the list scrollable */
 .scrollable {
   overflow: auto;
-  height: 85vh;
 }
 
 /* Navbar brand stuff */
@@ -125,6 +124,19 @@ input[type=number] {
 .btn-cool:focus {
   background-color: #118945;
   color: white;
+}
+
+#practice-list {
+  max-height: 0;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: max-height 0.5s;
+  -moz-transition: max-height 0.5s;
+  -ms-transition: max-height 0.5s;
+  -o-transition: max-height 0.5s;
+  transition: max-height 0.5s;
 }
 
 .active {
