--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,16 +14,18 @@ html, body {
   height: 100%;
 }
 
+/* Remove ugly outline */
 a, button {
   outline: 0 !important;
 }
-
+/* Centered text */
 .text-centre {
   text-align: center;
   margin: 0;
   padding: 0;
 }
 
+/* Move the modal up a bit */
 .ngdialog {
   top: -100px !important;
 }
@@ -100,7 +102,16 @@ input[type=number] {
 .navbar-default .navbar-toggle .icon-bar {
   background-color: white;
 }
+.navbar-collapse, .navbar-form {
+  border-style: none;
+  box-shadow: none;
+}
+.navbar>.container .navbar-brand-centred, 
+.navbar>.container-fluid .navbar-brand-centred {
+    margin-left: -125px;
+}
 
+/* My cool button */
 .btn-cool {
   background-color: #28A15D;
   border-color: #036D31;
@@ -122,9 +133,8 @@ input[type=number] {
   color: white;
 }
 
-#practice-list {
-  max-height: 0;
-  overflow: auto;
+/* Expand down the list and canvas */
+.animate-expand-down {
   margin: 0;
   padding: 0;
   -webkit-transform-style: preserve-3d;
@@ -134,18 +144,21 @@ input[type=number] {
   -o-transition: max-height 0.5s;
   transition: max-height 0.5s;
 }
+#practice-list {
+  max-height: 0;
+  overflow: auto;
+
+}
+#map_canvas {
+  max-height: 0;
+  overflow: hidden;
+}
 
 .active {
-/*  background-color: #28A15D !important;*/
   -webkit-transform-style: preserve-3d;
   transition: background .4s linear;
   -webkit-transition-duration: 0.4s;
   -moz-transition-duration: 0.4s;
-}
-
-.navbar>.container .navbar-brand-centred, 
-.navbar>.container-fluid .navbar-brand-centred {
-    margin-left: -125px;
 }
 
 .hidden {
@@ -159,10 +172,6 @@ input[type=number] {
   margin-top: -50px;
   text-align: center;
   clear: both;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
 }
 
 /* Responsive: Portrait tablets and up */
@@ -257,19 +266,6 @@ input[type=number] {
 }
 .animate-expand.ng-hide-add {
   line-height: 25px;
-}
-
-#map_canvas {
-  max-height: 0;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  -webkit-transform-style: preserve-3d;
-  -webkit-transition: max-height 0.5s;
-  -moz-transition: max-height 0.5s;
-  -ms-transition: max-height 0.5s;
-  -o-transition: max-height 0.5s;
-  transition: max-height 0.5s;
 }
 
 @media screen and (max-width: 991px) {
