--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,9 @@
+<div class="appLink">
+  <a href="https://play.google.com/store/apps/details?id=com.ionicframework.doctorpricer918978">
+    <img alt="Android app on Google Play"
+         src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png" />
+  </a>
+</div>
 <div class="centre-content">
   <h3>Compare fees from over 700 NZ practices.</h2>
   <form name="form" ng-submit="next()" class="form" novalidate>
