--- a/app/views/main.html
+++ b/app/views/main.html
@@ -20,9 +20,7 @@
       </div>
     </div>
     <div class="col-md-2 nopadding">
-      <button type="submit" class="btn btn-cool btn-lg">
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
-      </button>
+    <loading-button btn-size="btn-lg"></loading-button>
     </div>
   </form>
 </div>
