Added more phos to list

--- a/app/views/info.html
+++ b/app/views/info.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h4>Searching over 700 practices from the following PHOs</h4>
+  <h4>Searching over 800 practices from the following PHOs</h4>
   <ul class="list-unstyled" id='pho-list'>
     <li class="col-md-6"><a href="http://www.alliancehealth.org.nz/">Alliance Health Plus</a></li>
     <li class="col-md-6"><a href="http://www.aucklandpho.co.nz/">Auckland PHO</a></li>
@@ -15,11 +15,17 @@
     <li class="col-md-6"><a href="http://www.hauoracoalition.maori.nz/">National Hauora Coalition</a></li>
     <li class="col-md-6"><a href="http://www.manaiapho.co.nz/">Manaia Health PHO</a></li>
     <li class="col-md-6"><a href="http://www.nbph.org.nz/">Nelson Bays PHO</a></li>
+    <li class="col-md-6"><a href="http://www.teawakairangihealth.org.nz/">Te Awakairangi Health Network</a></li>
     <li class="col-md-6"><a href="http://www.procare.co.nz/">Procare</a></li>
+    <li class="col-md-6"><a href="http://www.raphs.org.nz/">Rotorua Area PHS</a></li>
     <li class="col-md-6"><a href="http://www.rcpho.org.nz/">Rural Canterbury PHO</a></li>
     <li class="col-md-6"><a href="http://www.southernpho.health.nz/">Southern PHO</a></li>
-    <li class="col-md-6"><a href="http://www.teawakairangihealth.org.nz/">Te Awakairangi Health Network</a></li>
+    <li class="col-md-6"><a href="http://www.scdhb.health.nz/">South Canterbury DHB</a></li>
+    <li class="col-md-6"><a href="http://www.nph.org.nz/">Ngati Porou Hauora</a></li>
+    <li class="col-md-6"><a href="http://www.nmopho.org.nz/">Nga Mataapuna Oranga</a></li>
     <li class="col-md-6"><a href="http://www.tttpho.co.nz/">Te Tai Tokerau PHO</a></li>
+    <li class="col-md-6"><a href="http://wellhealth.health.nz/">Well Health Trust</a></li>
+    <li class="col-md-6"><a href="http://www.westcoastpho.org.nz/">West Coast PHO</a></li>
     <li class="col-md-6"><a href="http://www.wboppho.org.nz/">Western Bay of Plenty PHO</a></li>
   </ul>
   <h4>Important Information</h4>
