--- a/app/views/info.html
+++ b/app/views/info.html
@@ -24,6 +24,7 @@
     <li class="col-md-6"><a href="http://www.nph.org.nz/">Ngati Porou Hauora</a></li>
     <li class="col-md-6"><a href="http://www.nmopho.org.nz/">Nga Mataapuna Oranga</a></li>
     <li class="col-md-6"><a href="http://www.tttpho.co.nz/">Te Tai Tokerau PHO</a></li>
+    <li class="col-md-6"><a href="http://www.wrpho.org.nz/">Whanganui Regional PHO</a></li>
     <li class="col-md-6"><a href="http://wellhealth.health.nz/">Well Health Trust</a></li>
     <li class="col-md-6"><a href="http://www.westcoastpho.org.nz/">West Coast PHO</a></li>
     <li class="col-md-6"><a href="http://www.wboppho.org.nz/">Western Bay of Plenty PHO</a></li>
