--- a/app/views/result.html
+++ b/app/views/result.html
@@ -32,22 +32,50 @@
             	<a type="button" class="btn btn-default btn-lg" ng-click="toggleSidebar()"><span ng-class="(sidebar==1) ? 'glyphicon-menu-right' : 'glyphicon-menu-left'" class="glyphicon"></span></a>
           	</p>
 			<tabset style="padding-top: 15px;">
-				<tab heading="Map">
+				<tab heading="Map" active="map.active">
 					<div class="animate-expand-down" id="map_canvas" ng-hide="noPractices" ng-controller="MapCtrl">
 						<leaflet id="leaflet_map" markers="markers" paths="paths" height="300px" width="100%" layers="layers"></leaflet>
 					</div>
 					<h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
 				</tab>
-				<tab heading="Info" ng-show="thisPractice.name">
-					<div style="padding: 15px;">
-						<div ng-hide="noPractices" class="pull-right">
-							<div class="btn-group" role="group" aria-label="links">
-								<a class="btn btn-cool" href='{{thisPractice.url}}' target="_blank">Website</a>
-								<a class="btn btn-cool" href="http://maps.apple.com/?saddr={{userAddress}}&daddr={{thisPractice.address}}" target="_blank">Directions</a>
+				<tab heading="Reviews" ng-show="thisPractice.name" deselect="reloadMap()">
+					<div style="padding: 0px 15px 15px 15px;">
+						<div class="row">
+							<div class="col-lg-12">
+								<div ng-hide="noPractices" class="pull-right">
+									<div class="btn-group" style="padding-top: 15px;" role="group" aria-label="links">
+										<a class="btn btn-cool" href='{{thisPractice.url}}' target="_blank">Website</a>
+										<a class="btn btn-cool" href="http://maps.apple.com/?saddr={{userAddress}}&daddr={{thisPractice.google.formatted_address}}" target="_blank">Directions</a>
+									</div>
+								</div>
+								<h3>{{thisPractice.name}} <small>{{thisPractice.pho}}</small></h3>
+								<rating ng-show="thisPractice.google.rating" ng-model="thisPractice.google.rating" max="5" readonly="true" state-on="'fa-star'" state-off="'fa-star-o'"></rating>
+								<a ng-hide="thisPractice.google.rating || thisPractice.google.reviews" href="{{thisPractice.google.url}}">Be the first to post a review on Google Plus</a>
+								</p>
 							</div>
 						</div>
-						<h4>{{thisPractice.name}} <small>{{thisPractice.pho}}</small></h4>
-						<p>No further information supplied for this practice.</p>
+						<br>
+						<div class="row">
+							<div class="col-lg-6 repeat-animate" ng-repeat="review in thisPractice.google.reviews">
+								<div class="panel panel-primary">
+									<div class="panel-heading">
+										<h4 class="panel-title">{{review.author_name}}
+										<rating style="float: right;" ng-model="review.rating" max="5" readonly="true" state-on="'fa-star'" state-off="'fa-star-o'"></rating></h4>
+									</div>
+									<div class="panel-body">
+										<span>{{review.text}}</span>
+										<br>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row" ng-show="thisPractice.google.rating || thisPractice.google.reviews">
+							<div class="col-lg-12">
+								<a href="{{thisPractice.google.url}}" target="_blank">Read all reviews on Google Plus</a>
+								<br>
+								<img src="images/powered-by-google-on-white.png">
+							</div>
+						</div>
 					</div>
 				</tab>
 			</tabset>
