Fixed bug with radius change

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="appLink">
   <a href="https://play.google.com/store/apps/details?id=com.ionicframework.doctorpricer918978">
     <img alt="Android app on Google Play"
-         src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png" />
+         src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png"></img>
   </a>
 </div>
 <div class="centre-content">
