--- a/app/views/result.html
+++ b/app/views/result.html
@@ -37,6 +37,7 @@
 						<leaflet id="leaflet_map" markers="markers" paths="paths" height="300px" width="100%" layers="layers"></leaflet>
 					</div>
 					<h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
+					<h4 class="text-left" ng-show="christchurch">Limited fee data available for Christchurch. For a more complete list of Christchurch practices visit <a href="http://www.pegasus.health.nz/gp-locator" target="_blank">Pegasus Health</a></h4>
 				</tab>
 				<tab heading="Reviews" ng-show="thisPractice.name" deselect="reloadMap()">
 					<div style="padding: 0px 15px 15px 15px;">
