Hidden layer control

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,10 @@
   z-index: 1;
 }
 
+.leaflet-control-layers {
+  visibility: hidden !important;
+}
+
 .fa-star, .fa-star-o {
   color: orange !important;
 }
