Added report inaccuracy button, 60km

--- a/app/views/result.html
+++ b/app/views/result.html
@@ -81,5 +81,6 @@
 				</tab>
 			</tabset>
 		</div>
+		<h3 class="no-up-down-padding" style="padding-right: 15px; float: right;"><small><a ng-click="reportModal()" href="">Incorrect information?<a></small></h3>
 	</div>
 </div>
