--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,13 @@
   z-index: 1;
 }
 
+select:disabled {
+ -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none;
+}
+
 .leaflet-control-layers {
   visibility: hidden !important;
 }
